2000-04-20  Richard Henderson  <rth@cygnus.com>

	* loop.c (emit_iv_add_mult): Revert last change.

2000-04-20  Zack Weinberg  <zack@wolery.cumb.org>

	* cpplib.h (enum cpp_ttype): Add token types for all
	punctuators.  Distinguish pp-numbers from valid C numbers.
	Give some tokens better names.  Initialize from macro.    
	(struct cpp_name, cpp_token, cpp_toklist): New data   
	structures.
	Update prototypes.
	* cpplex.c (bump_column, expand_name_space,
	expand_token_space, init_token_list, cpp_output_list,
	_cpp_scan_line):  New functions.
	(output_line_command): Add third argument, new line number.
	* cpphash.h: Update prototypes.
	* cppexp.c, cpphash.c, cpplib.c, scan-decls.c: Update for new
	token names.

2000-04-20  Richard Henderson  <rth@cygnus.com>

	* config/alpha/alpha.c (alpha_emit_floatuns): Emit missing barrier.

2000-04-20  Zack Weinberg  <zack@wolery.cumb.org>

	* c-common.c (decl_attributes) [A_ALIAS]: Set TREE_USED on the
	object pointed to.

Thu Apr 20 14:19:18 MET DST 2000  Jan Hubicka  <jh@suse.cz>

	* loop.c (emit_iv_add_mult):  Simplify it's input and emit
	REG_EQUAL note explaining the calculated value.

	* calls.c (expand_call): Avoid unnecesary precalculation
	and outgoing parameters space guarding for sibling calls.
	(store_one_arg): Likewise.

Thu Apr 20 08:01:07 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* toplev.c (enum dump_file_index, dump_file): Add DFI_sibling.
	(rest_of_compilation): Write sibling dump file and account
	for time as jump time.
	* invoke.texi: Update documentation on dump flags.

2000-04-19  Marek Michalkiewicz  <marekm@linux.org.pl>

	* avr.c: #include "system.h" instead of <stdio.h> and <stdlib.h>.

2000-04-19  Zack Weinberg  <zack@wolery.cumb.org>

	* cpphash.c (special_symbol): Represent an empty macro with
	"\r \r " not just "\r ".
	(_cpp_macroexpand): Correct condition for the foo ( ) special
	case.
	(unsafe_chars): Handle EOF as second argument.